# crawler2

./: Cargo.toml  README.md
src/: crawler.rs  error.rs  main.rs
src/spiders/: cvedetails.rs  github.rs  mod.rs  quotes.rs
