[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features = ["full"]}
tokio-stream = "0.1.9"
reqwest = {version = "0.11.11", default-features = false, features =["json", "rustls-tls"]}
clap = {version = "3.1", features = ["cargo"]}
anyhow =" 1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
select = "0.6.0-alpha.1"
url = "2.2"
futures = "0.3"
fantoccini = {version ="0.19", default-features = false, features = ["rustls-tls"]}
serde_json = "1.0"
serde = {version = "1.0", features =["derive"]}
regex = "1"
